Bug 165420 - Shell(Empty) crashes
Summary: Shell(Empty) crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-24 18:27 UTC by Mike Kaganski
Modified: 2025-03-12 07:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-02-24 18:27:51 UTC
Executing this Basic code crashes LibreOffice:

  Shell(Empty)
Comment 1 Mike Kaganski 2025-02-24 19:34:08 UTC
https://gerrit.libreoffice.org/c/core/+/182118
Comment 2 Werner Tietz 2025-02-24 20:39:46 UTC
cannot reproduce with 

Version: 7.4.7.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 4; OS: Linux 6.6; UI render: Skia/Vulkan; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Debian package version: 4:7.4.7-1+deb12u6
Calc: threaded

or 

Version: 25.2.0.3 (AARCH64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Flatpak
Calc: threaded
( both show Error »File not found« )

____

but reproduce with:
Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: c10dbe07b7def2eebd8eed3874c3df9b9d37fa41
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

(compiled from sources by me )
Comment 3 Werner Tietz 2025-02-24 21:25:39 UTC
(In reply to Mike Kaganski from comment #1)
> https://gerrit.libreoffice.org/c/core/+/182118

this patch fix the bug with »25.8.0.0.alpha0+ (AARCH64)«
Comment 4 Commit Notification 2025-02-25 06:36:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37216049f1a699a3269f0e19ee514e814b965266

tdf#165420: handle empty arguments correctly

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-02-25 12:35:49 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/55161dd3fdfa2526864d41a6552e8ee1a466e7e8

tdf#165420: handle empty arguments correctly

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-25 13:07:55 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d5700399b8c785e89395090079a3e303ac892bf2

tdf#165420: handle empty arguments correctly

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 RonnyMuller 2025-03-12 07:37:45 UTC Comment hidden (spam)